# Chameleon

./: .gitignore  CMakeLists.txt  README.md  running_spark.md  temp_installation.md  web_operation.md
cmake/: gflag.cmake  (+5 more)
my_hello/teacher_student_actor/: CMakeLists.txt
src/: CMakeLists.txt  last_version_README.md  master_cloc.csv
src/common/: chameleon_SMHC.hpp  chameleon_file.hpp  chameleon_os.hpp  chameleon_protobuf_utils.hpp  chameleon_resources.hpp  chameleon_string.hpp  chameleon_type_utils.hpp  module.hpp  parse.hpp  protobuf_utils.hpp  resources.cpp  scheduler.hpp  version.hpp
src/common/allocator/: allocator.hpp
src/common/authentication/: authenticatee.hpp  authentication.hpp
src/common/maintenance/: maintenance.hpp
src/common/master/: detector.hpp  master.hpp
src/common/module/: authenticatee.hpp  module.hpp
src/common/quota/: quota.hpp
src/common/slave/: containerizer.hpp  isolator.hpp
src/configure/Flink-demo/: README  README.md  collectingData.py  conf.conf  flink-conf.yaml  genes.py  gmExp.py  isTask.sh  optimize.py  requirement  run.py  training.py  util.py
src/configure/hm_ga/: readme
src/docker/: CMakeLists.txt  attributes.cpp  attributes.hpp  docker.cpp  docker.hpp  docker_test.cpp  executor.cpp  executor.hpp  messages.cpp  messages.hpp  resources.cpp  resources.hpp  roles.cpp  type_utils.cpp  type_utils.hpp  values.cpp  values.hpp
src/launcher/: CMakeLists.txt  exec.cpp  exec.hpp  executor.cpp  executor.hpp
src/linux/: cgroups.cpp  cgroups.hpp  fs.cpp  fs.hpp
src/local/: flags.hpp  local.hpp
src/log/: configuration_glog.hpp
src/logging/: flags.cpp  flags.hpp  logging.cpp  logging.hpp
src/master/: CMakeLists.txt  coarse_grained_scheduler.hpp  kill_master.cpp  master.cpp  master.cpp.orig  master.hpp  master_flags.hpp  optimization.cpp  resources.cpp  resources.hpp  scheduler.cpp  scheduler.hpp  scheduler_interface.hpp  slave_object.cpp  slave_object.hpp  smhc_grained_scheduler.cpp  smhc_grained_scheduler.hpp  super_master.cpp  super_master.hpp
src/master/scheduler/: cpu_scheduler.cpp  memory_scheduler.cpp  metric_scheduler.cpp  scheduler.cpp  scheduler.hpp
src/messages/: CMakeLists.txt  cluster_operation.proto  fetcher.proto  hardware_resource.proto  job.proto  maintenance.proto  master_p.proto  mesos.proto  messages.proto  module.proto  monitor_info.proto  participant_info.proto  runtime_resource.proto  scheduler.proto  slave_related.proto  super_master_related.proto
src/messages/to_protoc/: CMakeLists.txt  allocator.proto  containerizer.proto  master_p.proto  quota.proto
src/module/: manager.hpp
src/monitor/: CMakeLists.txt  monitor.cpp  monitor.hpp
src/my_hello/: CMakeLists.txt  client_server_message_event.cpp  future_promise.cpp  hello_word.cpp  http_process_learning.cpp  simpleserver.cpp  test-master.cpp
src/my_hello/libprocess_learning/: CMakeLists.txt  future_tests.cpp  io_tests.cpp  limiter_tests.cpp  mutex_tests.cpp  owned_tests.cpp  socket_tests.cpp  subprocess_tests.cpp  time_tests.cpp
src/my_hello/proto/: CMakeLists.txt  FacilityInformation.proto  Offer.proto  Teacher.proto  addressbook.proto  contect.proto  master.proto
src/my_hello/stout_learning/: CMakeLists.txt  ip_tests.cpp  lele_none_tests.cpp  lele_option_usage.cpp  lele_result_tests.cpp  lele_stout_my_learning.cpp  lele_try_tests.cpp  proc_tests.cpp
src/my_hello/teacher_student_actor/: CMakeLists.txt  student_protobuf.cpp  teacher_protobuf.cpp
src/participant/: CMakeLists.txt  participant.cpp  participant.hpp
src/sched/: CMakeLists.txt  authenticatee.hpp  constants.hpp  flags.hpp  sched.cpp
src/sched/master/: detector.cpp  detector.hpp  master.hpp  standalone.cpp  standalone.hpp
src/simulator/: AliSimulator.cpp  AliSimulator.hpp  AliSimulator_main.cpp  AliTraceLoader.cpp  AliTraceLoader.hpp  AliTracePreProcessor.h  CMakeLists.txt  SimulatedWallTime.cpp  SimulatedWallTime.hpp  SimulatorLinker.cpp  SimulatorLinker.hpp
src/slave/: CMakeLists.txt  DiskCollector.hpp  GpuCollector.cpp  GpuCollector.hpp  MemoryCollector.hpp  arm_cpu_collector.cpp  cpu_collector.cpp  cpu_collector.hpp  cpu_collector_tests.cpp  disk_collector.cpp  disk_collector.hpp  disk_collector_tests.cpp  docker_launch.cpp  gpu_collector.cpp  gpu_collector.hpp  gpu_collector_tests.cpp  memory_collector.cpp  memory_collector.hpp  memory_collector_tests.cpp  port_collector.cpp  port_collector.hpp  port_collector_tests.cpp  resource_collector.cpp  resource_collector.hpp  riscv_slave.cpp  riscv_slave.hpp  runtime_resources_usage.cpp  runtime_resources_usage.hpp  slave.cpp  slave.cpp.orig  slave.hpp  slave_flags.cpp  slave_flags.hpp  tlb_collector.cpp  tlb_collector.hpp  tlb_collector_tests.cpp  x86_cpu_collector.cpp
src/slave/containerizer/: containerizer.hpp  docker.cpp  docker.hpp
src/slave/resource_collector/: arm_cpu_collector.cpp  cpu_collector.cpp  cpu_collector_tests.cpp  disk_collector.cpp  disk_collector.hpp  disk_collector_tests.cpp  gpu_collector.cpp  gpu_collector_tests.cpp  memory_collector.cpp  memory_collector.hpp  memory_collector_tests.cpp  port_collector.cpp  port_collector_tests.cpp  resource_collector.hpp  runtime_resources_usage.cpp  tlb_collector.cpp  tlb_collector_tests.cpp  x86_cpu_collector.cpp
src/slave/software_store/: CMakeLists.txt  downloader.cpp  downloader.hpp  hdfs.cpp  hdfs.hpp  software_resource_manager.cpp  software_resource_manager.hpp
src/submitter/: CMakeLists.txt  submitter.cpp  submitter.hpp  submitter_flags.hpp
src/test/: Base.cpp  CMakeLists.txt  multipul.cpp
src/tests/html/: a.html  event.html  service.html
src/tests/temp/: 34_resources.json  79_resources.json  hardware_resources.json
src/webui/: README.md
src/webui/HTML/: Control.html  ControlSupermaster.html  Controlm.html  Controlwqn.html  Main.html  Operation.html  StartSupermaster.html  framework.html  frameworks.html  hardware.html  modal.html  myModalContent.html  network_topology.html  runtime.html  shutdown.html  slave.html  supernetwork_topology.html  test.html  vis_test.html
src/webui/css/: Chameleon.css  navbar.css
src/webui/icon/: chameleon-icon
(+227 files in other folders)
